[gd_scene load_steps=10 format=2]

[ext_resource path="res://Imagens/fundo preto.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Banco.gd" type="Script" id=2]
[ext_resource path="res://Imagens/Banco.png" type="Texture" id=3]
[ext_resource path="res://assets/tela_quintal.png" type="Texture" id=4]
[ext_resource path="res://Script/MoneyValue.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Script/NameDisplay.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="TelaQuintal" type="Sprite" parent="."]
position = Vector2( 636.75, 359.25 )
scale = Vector2( 0.676686, 0.832956 )
texture = ExtResource( 4 )

[node name="FundoPreto" type="Sprite" parent="."]
position = Vector2( 640.5, 359 )
scale = Vector2( 2.02969, 2.03333 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Banco" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.267699, 0.268093 )
texture = ExtResource( 3 )

[node name="Button_banco_voltar" type="Button" parent="."]
show_behind_parent = true
margin_left = 587.0
margin_top = 531.0
margin_right = 690.0
margin_bottom = 573.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_banco_voltar_left" type="Button" parent="."]
show_behind_parent = true
margin_left = -8.0
margin_right = 476.0
margin_bottom = 716.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_banco_voltar_right" type="Button" parent="."]
show_behind_parent = true
margin_left = 802.0
margin_top = -4.0
margin_right = 1286.0
margin_bottom = 712.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 669.0
margin_top = 208.0
margin_right = 757.0
margin_bottom = 232.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 635.0
margin_top = 154.0
margin_right = 761.0
margin_bottom = 177.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_banco_voltar" to="." method="_on_Button_banco_voltar_pressed"]
[connection signal="pressed" from="Button_banco_voltar_left" to="." method="_on_Button_banco_voltar_left_pressed"]
[connection signal="pressed" from="button_banco_voltar_right" to="." method="_on_button_banco_voltar_right_pressed"]
