extends Node2D

func _ready():
	pass # Replace with function body.

func _on_Button_banco_voltar_pressed():
	get_tree().change_scene("res://Cenas/Celular.tscn")


func _on_Button_banco_voltar_left_pressed():
	get_tree().change_scene("res://Cenas/Celular.tscn")


func _on_button_banco_voltar_right_pressed():
	get_tree().change_scene("res://Cenas/Celular.tscn")
